objects/Call_Grading_Form_2_0__c.object
<CustomObject>
    <fields>
        <fullName>GMBL_Owner_Conflict_Status__c</fullName>
        <label>GMBL Owner Conflict Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Google_Account__c</fullName>
        <label>Google Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Google_Listing_Status__c</fullName>
        <label>Google Listing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Google_Status__c</fullName>
        <label>Google Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Greeting_and_Goals__c</fullName>
        <label>Greeting and Goals</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_screen__c</fullName>
        <label>Home screen</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ICall_Flow_Adherence_Formula1__c</fullName>
        <formula>IF( RecordTypeId = '01232000000M3c4',
IF(ISPICKVAL( Opening__c ,"1"),50,0)+ 
IF(ISPICKVAL( Opening__c ,"2"),100,0)+ 
IF(ISPICKVAL( Acknowledge_Reason_for_Call__c ,"1"),50,0)+ 
IF(ISPICKVAL( Acknowledge_Reason_for_Call__c ,"2"),100,0)+ 
IF(ISPICKVAL( Ownership__c ,"1"),50,0)+ 
IF(ISPICKVAL( Ownership__c ,"2"),100,0)+ 
IF(ISPICKVAL( All_Client_Issue_s_Resolved__c ,"1"),50,0)+ 
IF(ISPICKVAL( All_Client_Issue_s_Resolved__c ,"2"),100,0)+ 
IF(ISPICKVAL( Review_Pending_Cases_in_Account__c ,"1"),50,0)+ 
IF(ISPICKVAL( Review_Pending_Cases_in_Account__c ,"2"),100,0)+ 
IF(ISPICKVAL( Complete_notes__c ,"1"),50,0)+ 
IF(ISPICKVAL( Complete_notes__c ,"2"),100,0)+ 
IF(ISPICKVAL( Necessary_Follow_Up_Work__c ,"1"),50,0)+ 
IF(ISPICKVAL( Necessary_Follow_Up_Work__c ,"2"),100,0)+ 
IF(ISPICKVAL( Proper_Closing_Transfer__c ,"1"),50,0)+ 
IF(ISPICKVAL( Proper_Closing_Transfer__c ,"2"),100,0)+ 
IF(ISPICKVAL( Upsell_Pitch__c ,"1"),50,0)+ 
IF(ISPICKVAL( Upsell_Pitch__c ,"2"),100,0),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ICall Flow Adherence Formula1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ICall_Flow_Adherence_Formula_2__c</fullName>
        <formula>IF( RecordTypeId = '01232000000M3c4', 
IF(ISPICKVAL( Opening__c ,"0"),100,0)+ 
IF(ISPICKVAL( Opening__c ,"1"),100,0)+ 
IF(ISPICKVAL( Opening__c ,"2"),100,0)+ 
IF(ISPICKVAL( Acknowledge_Reason_for_Call__c ,"0"),100,0)+ 
IF(ISPICKVAL( Acknowledge_Reason_for_Call__c ,"1"),100,0)+ 
IF(ISPICKVAL( Acknowledge_Reason_for_Call__c ,"2"),100,0)+ 
IF(ISPICKVAL( Ownership__c ,"0"),100,0)+ 
IF(ISPICKVAL( Ownership__c ,"1"),100,0)+ 
IF(ISPICKVAL( Ownership__c ,"2"),100,0)+ 
IF(ISPICKVAL( All_Client_Issue_s_Resolved__c ,"0"),100,0)+ 
IF(ISPICKVAL( All_Client_Issue_s_Resolved__c ,"1"),100,0)+ 
IF(ISPICKVAL( All_Client_Issue_s_Resolved__c ,"2"),100,0)+ 
IF(ISPICKVAL( Review_Pending_Cases_in_Account__c ,"0"),100,0)+ 
IF(ISPICKVAL( Review_Pending_Cases_in_Account__c ,"1"),100,0)+ 
IF(ISPICKVAL( Review_Pending_Cases_in_Account__c ,"2"),100,0)+ 
IF(ISPICKVAL( Complete_notes__c ,"0"),100,0)+ 
IF(ISPICKVAL( Complete_notes__c ,"1"),100,0)+ 
IF(ISPICKVAL( Complete_notes__c ,"2"),100,0)+ 
IF(ISPICKVAL( Necessary_Follow_Up_Work__c ,"0"),100,0)+ 
IF(ISPICKVAL( Necessary_Follow_Up_Work__c ,"1"),100,0)+ 
IF(ISPICKVAL( Necessary_Follow_Up_Work__c ,"2"),100,0)+ 
IF(ISPICKVAL( Proper_Closing_Transfer__c ,"0"),100,0)+ 
IF(ISPICKVAL( Proper_Closing_Transfer__c ,"1"),100,0)+ 
IF(ISPICKVAL( Proper_Closing_Transfer__c ,"2"),100,0)+ 
IF(ISPICKVAL( Upsell_Pitch__c ,"0"),100,0)+ 
IF(ISPICKVAL( Upsell_Pitch__c ,"1"),100,0)+ 
IF(ISPICKVAL( Upsell_Pitch__c ,"2"),100,0),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ICall Flow Adherence Formula 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ICall_Flow_Adherence_Formula__c</fullName>
        <formula>ICall_Flow_Adherence_Formula1__c/ICall_Flow_Adherence_Formula_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ICall Flow Adherence Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ICall_Flow_Adherence_Qualitative_Formula__c</fullName>
        <formula>Inbound_Monitoring_Text_Formula__c/Inbound_Monitoring_Text_Formula_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ICall Flow Adherence/Qualitative Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>If_Other_List_Objection_s__c</fullName>
        <label>If Other - List Objection(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impression_Share__c</fullName>
        <description>LBW Performance Call Quality Process</description>
        <label>Impression Share</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inbound_Monitoring_Formula_2__c</fullName>
        <formula>IF( RecordTypeId = '01232000000M3c4', 
IF(ISPICKVAL( Opening__c ,"0"),100,0)+ 
IF(ISPICKVAL( Opening__c ,"1"),100,0)+ 
IF(ISPICKVAL( Opening__c ,"2"),100,0)+ 
IF(ISPICKVAL( Acknowledge_Reason_for_Call__c ,"0"),100,0)+ 
IF(ISPICKVAL( Acknowledge_Reason_for_Call__c ,"1"),100,0)+ 
IF(ISPICKVAL( Acknowledge_Reason_for_Call__c ,"2"),100,0)+ 
IF(ISPICKVAL( Ownership__c  ,"0"),100,0)+ 
IF(ISPICKVAL( Ownership__c  ,"1"),100,0)+ 
IF(ISPICKVAL( Ownership__c  ,"2"),100,0)+ 
IF(ISPICKVAL(  All_Client_Issue_s_Resolved__c  ,"0"),100,0)+ 
IF(ISPICKVAL( All_Client_Issue_s_Resolved__c ,"1"),100,0)+ 
IF(ISPICKVAL( All_Client_Issue_s_Resolved__c ,"2"),100,0)+ 
IF(ISPICKVAL( Review_Pending_Cases_in_Account__c ,"0"),100,0)+ 
IF(ISPICKVAL( Review_Pending_Cases_in_Account__c ,"1"),100,0)+ 
IF(ISPICKVAL( Review_Pending_Cases_in_Account__c ,"2"),100,0)+ 
IF(ISPICKVAL( Complete_notes__c ,"0"),100,0)+ 
IF(ISPICKVAL( Complete_notes__c ,"1"),100,0)+ 
IF(ISPICKVAL( Complete_notes__c ,"2"),100,0)+ 
IF(ISPICKVAL( Necessary_Follow_Up_Work__c ,"0"),100,0)+ 
IF(ISPICKVAL( Necessary_Follow_Up_Work__c ,"1"),100,0)+ 
IF(ISPICKVAL( Necessary_Follow_Up_Work__c ,"2"),100,0)+ 
IF(ISPICKVAL( Proper_Closing_Transfer__c ,"0"),100,0)+ 
IF(ISPICKVAL( Proper_Closing_Transfer__c ,"1"),100,0)+ 
IF(ISPICKVAL( Proper_Closing_Transfer__c ,"2"),100,0)+ 
IF(ISPICKVAL( Upsell_Pitch__c ,"0"),100,0)+ 
IF(ISPICKVAL( Upsell_Pitch__c ,"1"),100,0)+ 
IF(ISPICKVAL( Upsell_Pitch__c ,"2"),100,0)+ 
IF(ISPICKVAL( Attitude_Tone_Empathy__c ,"0"),100,0)+ 
IF(ISPICKVAL( Attitude_Tone_Empathy__c ,"2"),100,0)+ 
IF(ISPICKVAL( Attitude_Tone_Empathy__c ,"4"),100,0)+ 
IF(ISPICKVAL( Resolution_Skills__c,"0"),100,0)+ 
IF(ISPICKVAL( Resolution_Skills__c,"2"),100,0)+ 
IF(ISPICKVAL( Resolution_Skills__c,"4"),100,0)+ 
IF(ISPICKVAL( Conversational_Ability__c ,"0"),100,0)+ 
IF(ISPICKVAL( Conversational_Ability__c ,"2"),100,0)+ 
IF(ISPICKVAL( Conversational_Ability__c ,"4"),100,0)+ 
IF(ISPICKVAL( Information_Accuracy__c ,"0"),100,0)+ 
IF(ISPICKVAL( Information_Accuracy__c ,"2"),100,0)+ 
IF(ISPICKVAL( Information_Accuracy__c,"4"),100,0)+ 
IF(ISPICKVAL( Pace__c ,"0"),100,0)+ 
IF(ISPICKVAL( Pace__c ,"2"),100,0)+ 
IF(ISPICKVAL( Pace__c,"4"),100,0)+ 
IF(ISPICKVAL( Call_control__c ,"0"),100,0)+ 
IF(ISPICKVAL( Call_control__c ,"2"),100,0)+ 
IF(ISPICKVAL( Call_control__c,"4"),100,0),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inbound Monitoring Formula 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inbound_Monitoring_Formula__c</fullName>
        <formula>IF( RecordTypeId = '01232000000M3c4', 
IF(ISPICKVAL( Opening__c ,"1"),50,0)+ 
IF(ISPICKVAL( Opening__c ,"2"),100,0)+ 
IF(ISPICKVAL(  Acknowledge_Reason_for_Call__c  ,"1"),50,0)+ 
IF(ISPICKVAL( Acknowledge_Reason_for_Call__c ,"2"),100,0)+ 
IF(ISPICKVAL( Ownership__c ,"1"),50,0)+ 
IF(ISPICKVAL( Ownership__c ,"2"),100,0)+ 
IF(ISPICKVAL( All_Client_Issue_s_Resolved__c ,"1"),50,0)+ 
IF(ISPICKVAL( All_Client_Issue_s_Resolved__c ,"2"),100,0)+ 
IF(ISPICKVAL( Review_Pending_Cases_in_Account__c  ,"1"),50,0)+ 
IF(ISPICKVAL( Review_Pending_Cases_in_Account__c ,"2"),100,0)+ 
IF(ISPICKVAL( Complete_notes__c ,"1"),50,0)+ 
IF(ISPICKVAL( Complete_notes__c ,"2"),100,0)+ 
IF(ISPICKVAL( Necessary_Follow_Up_Work__c  ,"1"),50,0)+ 
IF(ISPICKVAL( Necessary_Follow_Up_Work__c ,"2"),100,0)+ 
IF(ISPICKVAL( Proper_Closing_Transfer__c  ,"1"),50,0)+ 
IF(ISPICKVAL( Proper_Closing_Transfer__c ,"2"),100,0)+ 
IF(ISPICKVAL(  Upsell_Pitch__c  ,"1"),50,0)+ 
IF(ISPICKVAL( Upsell_Pitch__c ,"2"),100,0)+
IF(ISPICKVAL( Attitude_Tone_Empathy__c ,"2"),50,0)+ 
IF(ISPICKVAL( Attitude_Tone_Empathy__c ,"4"),100,0)+ 
IF(ISPICKVAL( Resolution_Skills__c ,"2"),50,0)+ 
IF(ISPICKVAL( Resolution_Skills__c,"4"),100,0)+ 
IF(ISPICKVAL( Conversational_Ability__c ,"2"),50,0)+ 
IF(ISPICKVAL( Conversational_Ability__c ,"4"),100,0)+ 
IF(ISPICKVAL( Information_Accuracy__c ,"2"),50,0)+ 
IF(ISPICKVAL( Information_Accuracy__c,"4"),100,0)+ 
IF(ISPICKVAL( Pace__c ,"2"),50,0)+ 
IF(ISPICKVAL( Pace__c,"4"),100,0)+ 
IF(ISPICKVAL( Call_control__c ,"2"),50,0)+ 
IF(ISPICKVAL( Call_control__c,"4"),100,0),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inbound Monitoring Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inbound_Monitoring_Text_Formula_2__c</fullName>
        <label>Inbound Monitoring Text Formula 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inbound_Monitoring_Text_Formula__c</fullName>
        <label>Inbound Monitoring Text Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Information_Accuracy__c</fullName>
        <inlineHelpText>Some Issues - Info that is not in line w/ best practices as will have some negative impact on the client’s understanding.

Misinformation - Inaccurate product info to client. Expectations set had negative impact, re-messaging to client may be needed</inlineHelpText>
        <label>Information Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Introduction__c</fullName>
        <label>Introduction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Google_Account_listed_in_MIC__c</fullName>
        <label>Is Google Account listed in MIC?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issues_Resolved__c</fullName>
        <description>(Properly attempted to resolved)</description>
        <inlineHelpText>(Properly attempted to resolved)</inlineHelpText>
        <label>All Client’s Issues Resolved</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Join_me_Login__c</fullName>
        <label>Join.me &amp; Login</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Junk_Mail_Warning__c</fullName>
        <label>Junk Mail Warning</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Landing_Pages__c</fullName>
        <label>Landing Pages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Details_Properties__c</fullName>
        <label>Lead Details - Properties</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Details_Searches__c</fullName>
        <label>Lead Details - Searches</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Details_Send_Listings__c</fullName>
        <label>Lead Details - Send Listings</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Details_Timeline__c</fullName>
        <label>Lead Details - Timeline</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Overview__c</fullName>
        <description>.</description>
        <label>Lead Overview</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Rating__c</fullName>
        <description>LBW Performance Call Quality Process</description>
        <label>Lead Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lighthouse_Portal_Login__c</fullName>
        <label>Lighthouse Portal Login</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Listing_1_2_4_Status__c</fullName>
        <label>Listing 1 (2-4) Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Listing_Rider__c</fullName>
        <label>Listing Rider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lists__c</fullName>
        <label>Lists</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MIC_Updated_for_listing_to_be_claimed__c</fullName>
        <label>MIC Updated for listing to be claimed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maps_Education__c</fullName>
        <label>Maps Education</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maps_Initial_Claiming_Updated_Correctly__c</fullName>
        <label>Maps Initial Claiming Updated Correctly</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maps_Listing__c</fullName>
        <label>Maps Listing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Features__c</fullName>
        <label>Marketing Features</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mass_Email__c</fullName>
        <label>Mass Email</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Message_Activation__c</fullName>
        <label>Message Activation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Messages__c</fullName>
        <label>Messages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>My_Account__c</fullName>
        <label>My Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Necessary_Casework_Submitted__c</fullName>
        <label>Necessary Casework Submitted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Necessary_Follow_Up_Work__c</fullName>
        <label>Necessary Follow-Up Work</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Feature_Information_Discussed__c</fullName>
        <label>New Feature/Information Discussed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Patient_Acquisition__c</fullName>
        <label>New Patient Acquisition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Newsletters__c</fullName>
        <label>Newsletters</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>